# crud-django

./: README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/accounts/: serializers.py  urls.py  views.py
backend/content/: models.py  permissions.py  serializers.py  views.py
backend/content/migrations/: 0001_initial.py  0002_favorite.py
backend/core/: settings.py  urls.py
backend/core/management/commands/: create_initial_data.py
frontend/: .gitignore  Dockerfile  dist  nuxt.config.ts  package-lock.json  package.json
frontend/app/assets/css/: main.css
frontend/app/components/: Navbar.vue
frontend/app/middleware/: auth.ts
frontend/app/pages/: create.vue  favoritos.vue  index.vue  login.vue
frontend/app/pages/contents/: create.vue
frontend/app/stores/: auth.ts
frontend/assets/styles/: index.css
